--- a/ssgchat_app/package.json
+++ b/ssgchat_app/package.json
@@ -11,11 +11,12 @@
     "@react-native-firebase/messaging": "^18.3.0",
     "@react-navigation/native": "^7.1.14",
     "@react-navigation/native-stack": "^7.3.21",
-    "expo": "^53.0.0",
+    "expo": "^53.0.17",
     "expo-location": "~18.1.6",
     "firebase": "^10.14.1",
     "react": "19.0.0",
     "react-native": "0.79.5",
+    "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "^5.4.0",
