코드 합친 후 react-native 버전으로 수정(테스트 필요)

--- a/ssgchat_app/EXPO_PUBLIC_FIREBASE_API_KEY=AIzaSy.env
+++ b/ssgchat_app/EXPO_PUBLIC_FIREBASE_API_KEY=AIzaSy.env
@@ -1,6 +1,6 @@
-EXPO_PUBLIC_FIREBASE_API_KEY=AIzaSyC1MQ7pdxoKnWcxelWXWUIAzSF_-K0Ptz0
-EXPO_PUBLIC_FIREBASE_AUTH_DOMAIN=ssgchat-cae94.firebaseapp.com
-EXPO_PUBLIC_FIREBASE_PROJECT_ID=ssgchat-cae94
-EXPO_PUBLIC_FIREBASE_STORAGE_BUCKET=ssgchat-cae94.appspot.com
-EXPO_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=828718591897
-EXPO_PUBLIC_FIREBASE_APP_ID=1:828718591897:web:4838c3ab55af865e8f2d08
+EXPO_PUBLIC_FIREBASE_API_KEY=AIzaSyApWNmV6Ax5sJZcVF2sdbfC7-3YtfPFhUI
+EXPO_PUBLIC_FIREBASE_AUTH_DOMAIN=ssgchat-cf0e9.firebaseapp.com
+EXPO_PUBLIC_FIREBASE_PROJECT_ID=ssgchat-cf0e9
+EXPO_PUBLIC_FIREBASE_STORAGE_BUCKET=ssgchat-cf0e9.firebasestorage.app
+EXPO_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=605679804637
+EXPO_PUBLIC_FIREBASE_APP_ID=1:605679804637:web:78f7948d5dc8413525bb34
