--- a/ssgchat_app/package.json
+++ b/ssgchat_app/package.json
@@ -6,17 +6,17 @@
     "start": "expo start"
   },
   "dependencies": {
-    "@react-native-firebase/app": "^18.3.0",
-    "@react-native-firebase/auth": "^18.3.0",
+    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-firebase/app": "^22.2.1",
+    "@react-native-firebase/auth": "^22.2.1",
+    "@react-native-firebase/firestore": "^22.2.1",
     "@react-native-firebase/messaging": "^18.3.0",
     "@react-navigation/native": "^7.1.14",
     "@react-navigation/native-stack": "^7.3.21",
     "expo": "^53.0.17",
     "expo-location": "~18.1.6",
-    "firebase": "^10.14.1",
     "react": "19.0.0",
     "react-native": "0.79.5",
-    "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "^5.4.0",
@@ -26,6 +26,7 @@
   "devDependencies": {
     "@types/react": "^19.1.8",
     "@types/react-native": "^0.72.8",
+    "react-native-dotenv": "^3.4.11",
     "typescript": "^5.8.3"
   }
 }
