--- a/ssgchat_app/package.json
+++ b/ssgchat_app/package.json
@@ -10,7 +10,7 @@
     "@react-native-firebase/app": "^22.2.1",
     "@react-native-firebase/auth": "^22.2.1",
     "@react-native-firebase/firestore": "^22.2.1",
-    "@react-native-firebase/messaging": "^18.3.0",
+    "@react-native-firebase/messaging": "^22.2.1",
     "@react-navigation/native": "^7.1.14",
     "@react-navigation/native-stack": "^7.3.21",
     "expo": "^53.0.17",
@@ -21,12 +21,12 @@
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "~4.11.1",
-    "react-navigation": "^4.4.4"
+    "react-navigation": "^4.4.4",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@types/react": "^19.1.8",
     "@types/react-native": "^0.72.8",
-    "react-native-dotenv": "^3.4.11",
     "typescript": "^5.8.3"
   }
 }
